数据分析按月统计范围不限

--- a/WebContent/crm/userProfile_view.html
+++ b/WebContent/crm/userProfile_view.html
@@ -1589,7 +1589,9 @@ $(function () {
  	$("#customer_phone_manual").val("");
 	$("#customer_name_manual").val("");
 	$("#min_money_auto").val("");
-	$("#max_money_auto").val("");    
+	$("#max_money_auto").val("");
+    $("#max_money_up_auto").val("");
+    $("#max_money_down_auto").val("");
 	$("#min_count_auto").val("");
 	$("#max_count_auto").val("");
 	$("#min_slient_auto").val(""); 
