首页整体运营指标功能修改

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -486,13 +486,13 @@
                                     <p class="f24" id="maoriAll">5.28亿</p>
                                 </a>
                                 <ul >
-                                    <li>
+                                    <li class="pull-left">
                                         <a>
                                             <p class="bg-light-blue"><span>优易</span><br>业务目标：<span id="youyiTarget"></span><span>万</span></p>
                                             <p class="f16 text-green" id="youyi">月完成进度<br><span id="youyiActual"></span></p>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="pull-left">
                                         <a>
                                             <p class="bg-light-blue"><span>点位</span><br>业务目标：<span id="dianweiTarget"></span><span>万</span></p>
                                             <p class="f16 text-black" id="dianwei">月完成进度<br><span id="dianweiActual">暂无数据</span></p>
@@ -503,34 +503,66 @@
                                             <p class="bg-light-blue"><span>金超</span><br>业务目标：<span id="jinchaoTarget"></span><span>万</span></p>
                                             <p class="f16 text-black" id="jinchao">月完成进度<br><span id="jinchaoActual">暂无数据</span></p>
                                         </a>
+                                        <ul class="three_menu" style="display: none">
+                                            <li>
+                                                <a>
+                                                    <p class="bg-light-blue"><span>财富</span><br>暂无数据</p>
+                                                    <p class="f16 text-green">月完成进度<br><span>暂无数据</span></p>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a>
+                                                    <p class="bg-light-blue"><span>保险</span><br>暂无数据</p>
+                                                    <p class="f16 text-green">月完成进度<br><span>暂无数据</span></p>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a>
+                                                    <p class="bg-light-blue"><span>P2P</span><br>暂无数据</p>
+                                                    <p class="f16 text-green">月完成进度<br><span>暂无数据</span></p>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a>
+                                                    <p class="bg-light-blue"><span>小贷</span><br>暂无数据</p>
+                                                    <p class="f16 text-green">月完成进度<br><span>暂无数据</span></p>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a>
+                                                    <p class="bg-light-blue"><span>保险</span><br>暂无数据</p>
+                                                    <p class="f16 text-green">月完成进度<br><span>暂无数据</span></p>
+                                                </a>
+                                            </li>
+                                        </ul>
                                     </li>
-                                    <li>
+                                    <li class="pull-left">
                                         <a>
                                             <p class="bg-light-blue"><span>家务事</span><br>业务目标：<span id="jiawushiTarget"></span><span>万</span></p>
                                             <p class="f16 text-red" id="jiawushi">月完成进度<br><span id="jiawushiActual"></span></p>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="pull-left">
                                         <a>
-                                            <p class="bg-light-blue"><span>产品中心</span><br>目标：<span id="chanpinTarget"></span><span>万</span></p>
+                                            <p class="bg-light-blue"><span>产品中心</span><br>业务目标：<span id="chanpinTarget"></span><span>万</span></p>
                                             <p class="f16 text-green" id="chanpin">月完成进度<br><span id="chanpinActual"></span></p>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="pull-left">
                                         <a>
                                             <p class="bg-light-blue"><span>智诚</span><br>业务目标：暂无数据</p>
                                             <p class="f16 text-black">月完成进度<br><span>暂无数据</span></p>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="pull-left">
                                         <a>
-                                            <p class="bg-light-blue"><span>政府补贴</span><br>目标：<span id="zhengfuTarget"></span><span>万</span></p>
+                                            <p class="bg-light-blue"><span>政府补贴</span><br>业务目标：<span id="zhengfuTarget"></span><span>万</span></p>
                                             <p class="f16 text-black" id="zhengfu">月完成进度<br><span id="zhengfuActual">暂无数据</span></p>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="pull-right">
                                         <a>
-                                            <p class="bg-light-blue"><span>综合中心</span><br>目标：<span id="zongheTarget">暂无数据</span></p>
+                                            <p class="bg-light-blue"><span>综合中心</span><br>业务目标：<span id="zongheTarget">暂无数据</span></p>
                                             <p class="f16 text-black">月完成进度<br><span id="zongheActual">暂无数据</span></p>
                                         </a>
                                     </li>
@@ -549,32 +581,32 @@
                                     <li class="pull-left">
                                         <a>
                                             <p class="bg-light-blue"><span>社区总部</span><br>任务：<span>暂无数据</span></p>
-                                            <p class="f16 text-red">月完成进度<br><span>暂无数据</span></p>
+                                            <p class="f16 text-black">月完成进度<br><span>暂无数据</span></p>
                                         </a>
                                     </li>
                                     <li>
                                         <a>
                                             <p class="bg-light-blue"><span>京津沪</span><br>整体任务：<span id="jjhCityTarget">暂无数据</span></p>
-                                            <p class="f16 text-green">月完成进度<br><span id="jjhCityActual">暂无数据</span></p>
+                                            <p class="f16 text-black">月完成进度<br><span id="jjhCityActual">暂无数据</span></p>
                                         </a>
                                         <!--三级菜单-->
                                         <ul class="three_menu">
                                             <li>
                                                 <a>
                                                     <p class="bg-light-blue"><span>北京区域</span><br><span id="beijingAllTarget">暂无数据</span></p>
-                                                    <p class="f16 text-green">月完成进度<br><span id="beijingAllActual">暂无数据</span></p>
+                                                    <p class="f16 text-black">月完成进度<br><span id="beijingAllActual">暂无数据</span></p>
                                                 </a>
                                                 <ul class="three_menu">
                                                     <li>
                                                         <a>
                                                             <p class="bg-light-blue"><span>北京总部</span><br><span id="beijingHeadquartersTarget">暂无数据</span></p>
-                                                            <p class="f16 text-green">月完成进度<br><span id="beijingHeadquartersActual">暂无数据</span></p>
+                                                            <p class="f16 text-black">月完成进度<br><span id="beijingHeadquartersActual">暂无数据</span></p>
                                                         </a>
                                                     </li>
                                                     <li>
                                                         <a>
                                                             <p class="bg-light-blue"><span>北京(79店)</span><br><span id="beijingStoreTarget"></span><span>万</span></p>
-                                                            <p class="f16 text-red">月完成进度<br><span id="beijingStoreActual"></span></p>
+                                                            <p class="f16 text-red" id="beijing">月完成进度<br><span id="beijingStoreActual">业务目标：</span></p>
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -582,19 +614,19 @@
                                             <li>
                                                 <a>
                                                     <p class="bg-light-blue"><span>天津区域</span><br><span id="tianjinAllTarget">暂无数据</span></p>
-                                                    <p class="f16 text-green">月完成进度<br><span id="tianjinAllActual">暂无数据</span></p>
+                                                    <p class="f16 text-black">月完成进度<br><span id="tianjinAllActual">暂无数据</span></p>
                                                 </a>
                                                 <ul class="three_menu">
                                                     <li>
                                                         <a>
                                                             <p class="bg-light-blue"><span>天津总部</span><br><span id="tianjinHeadquartersTarget">暂无数据</span></p>
-                                                            <p class="f16 text-red">月完成进度<br><span id="tianjinHeadquartersActual">暂无数据</span></p>
+                                                            <p class="f16 text-black">月完成进度<br><span id="tianjinHeadquartersActual">暂无数据</span></p>
                                                         </a>
                                                     </li>
                                                     <li>
                                                         <a>
                                                             <p class="bg-light-blue"><span>天津(51店)</span><br><span id="tianjinStoreTarget"></span><span>万</span></p>
-                                                            <p class="f16 text-green">月完成进度<br><span id="tianjinStoreActual"></span></p>
+                                                            <p class="f16 text-green" id="tianjin">月完成进度<br><span id="tianjinStoreActual">业务目标：</span></p>
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -602,19 +634,19 @@
                                             <li>
                                                 <a>
                                                     <p class="bg-light-blue"><span>上海区域</span><br><span id="shanghaiAllTarget">暂无数据</span></p>
-                                                    <p class="f16 text-green">月完成进度<br><span id="sahnghaiAllActual">暂无数据</span></p>
+                                                    <p class="f16 text-black">月完成进度<br><span id="sahnghaiAllActual">暂无数据</span></p>
                                                 </a>
                                                 <ul class="three_menu">
                                                     <li>
                                                         <a>
                                                             <p class="bg-light-blue"><span>上海总部</span><br><span id="shanghaiHeadquartersTarget">暂无数据</span></p>
-                                                            <p class="f16 text-green">月完成进度<br><span id="shanghaiHeadquartersActual">暂无数据</span></p>
+                                                            <p class="f16 text-black">月完成进度<br><span id="shanghaiHeadquartersActual">暂无数据</span></p>
                                                         </a>
                                                     </li>
                                                     <li>
                                                         <a>
                                                             <p class="bg-light-blue"><span>上海(30店)</span><br><span id="shanghaiStoreTarget"></span><span>万</span></p>
-                                                            <p class="f16 text-red">月完成进度<br><span id="shanghaiStoreActual"></span></p>
+                                                            <p class="f16 text-red" id="shanghai">月完成进度<br><span id="shanghaiStoreActual">业务目标：</span></p>
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -624,25 +656,25 @@
                                     <li class="pull-right">
                                         <a>
                                             <p class="bg-light-blue"><span>智诚业务</span><br>整体任务：暂无数据</p>
-                                            <p class="f16 text-red">月完成进度<br><span>暂无数据</span></p>
+                                            <p class="f16 text-black">月完成进度<br><span>暂无数据</span></p>
                                         </a>
                                         <ul>
                                             <li>
                                                 <a>
                                                     <p class="bg-light-blue">云南区域：暂无数据</p>
-                                                    <p class="f16 text-red">月完成进度<br><span>暂无数据</span></p>
+                                                    <p class="f16 text-black">月完成进度<br><span>暂无数据</span></p>
                                                 </a>
                                             </li>
                                             <li>
                                                 <a>
                                                     <p class="bg-light-blue">贵州区域：暂无数据</p>
-                                                    <p class="f16 text-red">月完成进度<br><span>暂无数据</span></p>
+                                                    <p class="f16 text-black">月完成进度<br><span>暂无数据</span></p>
                                                 </a>
                                             </li>
                                             <li>
                                                 <a>
                                                     <p class="bg-light-blue">辽宁区域：暂无数据</p>
-                                                    <p class="f16 text-red">月完成进度<br><span>暂无数据</span></p>
+                                                    <p class="f16 text-black">月完成进度<br><span>暂无数据</span></p>
                                                 </a>
                                             </li>
                                         </ul>
