--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -454,19 +454,19 @@
           	<input type="hidden" id="tradesumofcurmonthHid">
             <h5 class="no-margin" style="cursor: pointer;" onmouseover="showTooltip();" onmouseout="hideTooltip();">当月营业额</h5>
             <font id="attention" style="color:#FFFFFF;font-size: 12px;white-space: nowrap;position: absolute;top:-18px;z-index: 1000;display:none;left:60px">统计口径：签收金额 - 退货金额</font>	
-            <p id="tradesumofcurmonths"></p>
+            <p id="tradesumofcurmonths" class="test1"></p>
           </div>
           <div class="col-sm-3">
           	<input type="hidden" id="tradesumofyearHid">
             <h5 class="no-margin" style="cursor: pointer;" onmouseover="showTooltip2();" onmouseout="hideTooltip2();">当年营业额</h5>
             <font id="attention2" style="color:#FFFFFF;font-size: 12px;white-space: nowrap;position: absolute;top:-18px;z-index: 1000;display:none;left:60px">统计口径：签收金额 - 退货金额</font>
-            <p id="tradesumofCurYears"></p>
+            <p id="tradesumofCurYears" class="test1"></p>
           </div>
           <div class="col-sm-3">
           	<input type="hidden" id="tradesumofhistoryHid">
             <h5 class="no-margin" style="cursor: pointer;" onmouseover="showTooltip3();" onmouseout="hideTooltip3();">历史营业额</h5>
             <font id="attention3" style="color:#FFFFFF;font-size: 12px;white-space: nowrap;position: absolute;top:-18px;z-index: 1000;display:none;left:60px">统计口径：签收金额 - 退货金额</font>
-            <p id="tradesumofhistorys"></p>
+            <p id="tradesumofhistorys" class="test1"></p>
           </div>
             <div class="col-sm-3 pull-left zhibiao">
                 <h5 class="no-margin">整体经营指标</h5>
@@ -605,8 +605,8 @@
                                                     </li>
                                                     <li>
                                                         <a>
-                                                            <p class="bg-light-blue"><span>北京(79店)</span><br><span id="beijingStoreTarget"></span><span>万</span></p>
-                                                            <p class="f16 text-red" id="beijing">月完成进度<br><span id="beijingStoreActual">业务目标：</span></p>
+                                                            <p class="bg-light-blue"><span>北京(79店)</span><br><span>业务目标：</span><span id="beijingStoreTarget"></span><span>万</span></p>
+                                                            <p class="f16 text-red" id="beijing">月完成进度<br><span id="beijingStoreActual"></span></p>
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -625,8 +625,8 @@
                                                     </li>
                                                     <li>
                                                         <a>
-                                                            <p class="bg-light-blue"><span>天津(51店)</span><br><span id="tianjinStoreTarget"></span><span>万</span></p>
-                                                            <p class="f16 text-green" id="tianjin">月完成进度<br><span id="tianjinStoreActual">业务目标：</span></p>
+                                                            <p class="bg-light-blue"><span>天津(51店)</span><br><span>业务目标：</span><span id="tianjinStoreTarget"></span><span>万</span></p>
+                                                            <p class="f16 text-green" id="tianjin">月完成进度<br><span id="tianjinStoreActual"></span></p>
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -645,8 +645,8 @@
                                                     </li>
                                                     <li>
                                                         <a>
-                                                            <p class="bg-light-blue"><span>上海(30店)</span><br><span id="shanghaiStoreTarget"></span><span>万</span></p>
-                                                            <p class="f16 text-red" id="shanghai">月完成进度<br><span id="shanghaiStoreActual">业务目标：</span></p>
+                                                            <p class="bg-light-blue"><span>上海(30店)</span><br><span>业务目标：</span><span id="shanghaiStoreTarget"></span><span>万</span></p>
+                                                            <p class="f16 text-red" id="shanghai">月完成进度<br><span id="shanghaiStoreActual"></span></p>
                                                         </a>
                                                     </li>
                                                 </ul>
